cmake_minimum_required(VERSION 3.12)
project(2_Files)

set(CMAKE_CXX_STANDARD 14)

#add_executable(2_Files WritingTextFiles.cpp)
# add_executable(2_Files ReadingTextFiles.cpp)
# add_executable(2_Files ParsingText.cpp)
# add_executable(2_Files StructsAndPadding.cpp)
add_executable(2_Files BinaryFiles.cpp)